# ai-game

./: .gitignore  AIGame.cpp  AIGame.vcxproj  AIGame.vcxproj.filters  Board.cpp  Board.h  CMakeLists.txt  Makefile  regles.txt  run.bat
.github/workflows/: cmake.yml
AIGame/: AIGame.sln  Board.cpp  Board.h
src/: AbstractIA.cpp  AbstractIA.h  AllIA.cpp  AllIA.h  AntIA1.cpp  AntIA1.h  BaseIA.cpp  BaseIA.h  Board.cpp  Board.h  Case.cpp  DylIA.cpp  DylIA.h  IA.cpp  IA.h  QuiesceIA.cpp  QuiesceIA.h  returnIA.cpp  returnIA.h
